fix: fixing bug on style of close button (ie11/firefox) and fixing forEach and .classList on ie11

--- a/src/assets/scss/base/_main.scss
+++ b/src/assets/scss/base/_main.scss
@@ -20,6 +20,7 @@
 
 	button {
 		cursor: pointer;
+		padding: 0;
 	}
 
 	&-chat {
